--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,13 @@
 	display: grid;
 	grid-template-columns: auto auto auto auto;
 	align-content: center;
-width: 880px;
-margin: auto;
+	width: 880px;
+	margin: auto;
+}
+.App > span {
+	position: fixed;
+	bottom: 0;
+	right: 0;
+	font-size: 0.8em;
+	padding: 1em;
 }
