Better responsive css

--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,21 @@
-.App {
-	display: grid;
-	grid-template-columns: auto auto;
-	align-content: center;
+.app {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
 	width: 100%;
-
-	max-width: 440px;
-	margin: auto;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
 }
-.App > span {
+.app,
+.time {
+	display: inline-flex;
+}
+
+.app > span {
 	position: fixed;
 	bottom: 0;
 	right: 0;
 	font-size: 0.8em;
 	padding: 1em;
-}
-
-@media only screen and (min-width: 600px) {
-	/* For tablets: */
-	.App {
-		grid-template-columns: auto auto;
-		width: 100%;
-		max-width: 880px;
-	}
-}
-
-@media only screen and (min-width: 768px) {
-	/* For desktop: */
-	.App {
-		grid-template-columns: auto auto auto auto;
-		width: 880px;
-		max-width: 880px;
-	}
 }
