--- a/src/AnalogClock/Clock.css
+++ b/src/AnalogClock/Clock.css
@@ -1,9 +1,8 @@
 .clock {
   display: inline-block;
   border-radius: 100%;
-  background: #ffffff;
+  background: #2d3142;
   font-family: "Montserrat";
-  border: 5px solid white;
 }
 
 .clock.tiny {
@@ -82,7 +81,7 @@
   left: 0;
   bottom: 0;
   right: 0;
-  background: black;
+  background: #fff;
   -webkit-transform-origin: bottom center;
           transform-origin: bottom center;
   -webkit-transform: rotate(0deg);
@@ -123,7 +122,7 @@
   width: 8px;
   height: 8px;
   border-radius: 100px;
-  background: #1b1b1b;
+  background: #fff;
   border: 3px solid #ffffff;
   border-radius: 100px;
   margin: auto;
