--- a/src/AnalogClock/Clock.scss
+++ b/src/AnalogClock/Clock.scss
@@ -1,5 +1,9 @@
 // $size: 200;
 
+$background: #2d3142;
+// $primary: #6369d1;
+$primary: #fff;
+
 @mixin square($size, $radius: 100%) {
 	width: $size + px;
 	height: $size + px;
@@ -19,9 +23,8 @@
 .clock {
 	display: inline-block;
 	border-radius: 100%;
-	background: #ffffff;
+	background: $background;
 	font-family: "Montserrat";
-	border: 5px solid white;
 	// box-shadow: inset 1px 3px 6px 0 rgba(0, 0, 0, 0.05);
 	&.tiny {
 		$size: 75;
@@ -80,7 +83,7 @@
 		left: 0;
 		bottom: 0;
 		right: 0;
-		background: black;
+		background: $primary;
 		transform-origin: bottom center;
 		transform: rotate(0deg);
 		box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
@@ -115,7 +118,7 @@
 		width: 8px;
 		height: 8px;
 		border-radius: 100px;
-		background: #1b1b1b;
+		background: $primary;
 		border: 3px solid #ffffff;
 		border-radius: 100px;
 		margin: auto;
