--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
 	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-		"Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+	font-family: "IBM Plex Mono", -apple-system, BlinkMacSystemFont, "Segoe UI",
+		"Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
 		"Helvetica Neue", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
@@ -18,11 +18,6 @@ body {
 	-webkit-animation: FadeBackgroundColour 59s ease infinite;
 	-moz-animation: FadeBackgroundColour 59s ease infinite;
 	animation: FadeBackgroundColour 59s ease infinite;
-}
-
-code {
-	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-		monospace;
 }
 
 @-webkit-keyframes FadeBackgroundColour {
