--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,63 @@
 	padding: 1em;
 	color: white;
 }
+
+.optionsBtn {
+	cursor: pointer;
+}
+
+.closeButton {
+	background-color: #f1b2f4;
+	width: 100%;
+	height: 50px;
+	border-radius: 10px;
+	border: none;
+	font-size: 1em;
+	color: #272323;
+}
+
+.closeButton:active {
+	border: solid white 2px;
+}
+
+.closeButton:focus {
+	outline: none;
+}
+
+.overlay {
+	position: fixed;
+	width: 100%;
+	height: 100vh;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: rgba(1, 1, 1, 0.25);
+	backdrop-filter: blur(4px);
+	z-index: 1000;
+	align-content: center;
+}
+.optionsContainer {
+	background-color: #272323;
+	color: #92c9f5;
+	width: 400px;
+	z-index: 1001;
+	text-align: center;
+	border-radius: 10px;
+	margin: 1em;
+	cursor: default;
+	overflow-y: scroll;
+	max-height: calc(100vh - 4em);
+	margin-left: auto;
+	padding: 1em;
+}
+
+.options {
+	text-align: left;
+}
+
+h3 {
+	position: sticky;
+	top: 0em;
+	background: #272323;
+}
