--- a/src/components/Radio/RadioGroup.css
+++ b/src/components/Radio/RadioGroup.css
@@ -3,11 +3,7 @@
 	position: relative;
 	margin: 10px auto;
 	height: auto;
-	padding: 20px;
-}
-
-h2 {
-	color: #aaaaaa;
+	padding: 0 2em;
 }
 
 .radioContainer ul {
@@ -23,30 +19,34 @@ h2 {
 	position: relative;
 	float: left;
 	width: 100%;
-	height: 100px;
-	border-bottom: 1px solid #333;
-	background-color: #383535;
+	margin-bottom: 8px;
+}
+
+.radioContainer ul li:hover {
+	background-color: #f5f5f5;
+	border-radius: 1em;
 }
 
 .radioContainer ul li input[type="radio"] {
 	position: absolute;
 	visibility: hidden;
+	display: none;
 }
 
 .radioContainer ul li label {
 	display: block;
 	position: relative;
 	font-weight: 300;
-	padding: 25px 25px 25px 70px;
-	margin: 10px auto;
+	padding: 7px 16px 7px 58px;
 	height: 20px;
 	z-index: 9;
 	cursor: pointer;
 	-webkit-transition: all 0.25s linear;
+	color: #212020;
 }
 
 .radioContainer ul li:hover label {
-	color: #ffffff;
+	color: #645d5d;
 }
 
 .radioContainer ul li .check {
@@ -54,17 +54,16 @@ h2 {
 	position: absolute;
 	border: 5px solid #aaaaaa;
 	border-radius: 100%;
-	height: 15px;
-	width: 15px;
-	top: 30px;
-	left: 20px;
+	height: 24px;
+	width: 24px;
+	top: 0;
 	z-index: 5;
 	transition: border 0.25s linear;
 	-webkit-transition: border 0.25s linear;
 }
 
 .radioContainer ul li:hover .check {
-	border: 5px solid #ffffff;
+	border: 5px solid #645d5d;
 }
 
 .radioContainer ul li .check::before {
@@ -72,10 +71,10 @@ h2 {
 	position: absolute;
 	content: "";
 	border-radius: 100%;
-	height: 9px;
-	width: 9px;
-	top: 3px;
-	left: 3px;
+	height: 16px;
+	width: 16px;
+	top: 4px;
+	left: 4px;
 	margin: auto;
 	transition: background 0.25s linear;
 	-webkit-transition: background 0.25s linear;
