--- a/src/pages/Clock.css
+++ b/src/pages/Clock.css
@@ -21,10 +21,44 @@
 	color: white;
 }
 
+h2 {
+	top: 0em;
+	margin-left: 2rem;
+}
+h3 {
+	top: 0em;
+	margin-left: 2rem;
+}
+p {
+	margin-left: 2rem;
+}
+
 .optionsBtn {
 	cursor: pointer;
 }
 
+.icon {
+	fill: none;
+	stroke: #212020;
+	stroke-linecap: round;
+	stroke-linejoin: round;
+	stroke-width: 3px;
+}
+.close {
+	cursor: pointer;
+	width: 30px;
+	display: inline-block;
+	text-align: center;
+	vertical-align: baseline;
+	border-radius: 8px;
+	padding-top: 2px;
+	position: relative;
+	margin-right: 1em;
+}
+
+.close:hover {
+	background: #cc8b8c;
+}
 .closeButton {
 	background-color: #f1b2f4;
 	width: 100%;
@@ -59,28 +93,23 @@
 	display: flex;
 }
 .optionsContainer {
-	background-color: #383535;
-	color: #92c9f5;
+	position: fixed;
+	width: 100%;
+	height: 100vh;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	background-color: #fff;
+	color: #212020;
 	width: 400px;
 	z-index: 1001;
-	text-align: center;
-	border-radius: 10px;
-	margin: 1em;
 	cursor: default;
 	overflow-y: scroll;
-	max-height: calc(100vh - 4em);
 	margin-left: auto;
-	padding: 1em;
 }
 
 .options {
 	text-align: left;
-}
-
-h3 {
-	/* position: sticky; */
-	top: 0em;
-	background: #383535;
 }
 
 .animatedBackgroundOne {
