--- a/src/pages/Clock.css
+++ b/src/pages/Clock.css
@@ -2,10 +2,10 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  width: 100%;
   justify-content: center;
   align-items: center;
   height: 100vh;
+  width: 100vw;
 }
 .app,
 .time {
